# agloom

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  agloom-progress.json  agloom-progress.meta.json  mkdocs.yml  pyproject.toml  test.py  test_cli.py
.cursor/rules/: async-streaming-ui.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml  publish.yml  python-publish.yml
agloom/: README.md  __init__.py  cache.py  classifier.py  cli_notice.py  compat.py  delegation.py  frozen.py  graph.py  hitl_contract.py  llm_streaming.py  llm_utils.py  logging_utils.py  mcp_support.py  models.py  multimodal.py  turn_input.py  unified_agent.py  wire_execution_result.py  wire_stream_content.py  wire_tokens.py  worker.py
agloom/cli_tools/: __init__.py  filesystem.py  html_extract.py  messages.py  meta.py  notebook.py  safety.py  safety_metadata.py  shell.py  subprocess_env.py  task.py  web.py
agloom/docs/: index.md
agloom/eval/: __init__.py  runner.py
agloom/examples/: README.md
agloom/feedback/: __init__.py  evaluator.py  store.py  trends.py  user_feedback.py  wireup.py
agloom/harness/: __init__.py  git.py  initializer.py  progress.py
agloom/llm/: __init__.py  instance_key.py  llm_provider_params.py  model_resolver.py  provider_registry.py  qwen_compat.py  rough_cost.py  sampling_presets.py
agloom/memory/: __init__.py  injection.py  session.py  store.py  tools.py
agloom/observability/: __init__.py  api.py  metrics.py  replay.py
agloom/orchestrator/: __init__.py  context.py  dispatch.py  escalation.py  evaluation.py  hooks.py  plan.py  runtime.py  safety.py  trace.py
agloom/patterns/: __init__.py  _blackboard_state.py  _dag.py  _resolve.py  _sequential.py  _steps_accounting.py  _synthesis_contract.py  _upstream_context.py  _worker_signals.py  blackboard.py  clarification_tool.py  hitl.py  hitl_read_file_dedupe.py  hitl_tool_coalesce.py  hybrid_dag.py  middleware.py  pipeline.py  planner_executor.py  react.py  react_tool_recovery.py  reflection.py  supervisor.py  swarm.py  worker_gates.py
agloom/prompts/: __init__.py  cli_workspace_prompt.txt  core.py  yaml_sync.py
agloom/protocol/: __init__.py  commands.py  emitter.py  envelope.py  events.py  schema.py  store.py
agloom/runtime/: __init__.py  __main__.py  atomic_io.py  attachment_stage.py  bridge.py  budget_tracker.py  command_dispatch.py  hitl.py  hitl_allowlist.py  invocation_context.py  node.py  otel_setup.py  path_safety.py  pool.py  serve_cli.py  session_bootstrap.py  session_memory.py  translator.py  upload.py  workspace_bootstrap.py  ws.py  yaml_safe.py
agloom/skills/: __init__.py  generator.py  injector.py  learner.py  lifecycle.py  loader.py  registry.py  skill.py
agloom/tests/: __init__.py  conftest.py  test_agent_config.py  test_agent_name_store_registry.py  test_agp_schema_contract.py  test_audit_hardening.py  test_cache_pool.py  test_checkpoint_channel_versions.py  test_circuit_breaker_exceptions.py  test_classifier_mcp_routing.py  test_classifier_pattern_catalog.py  test_classifier_prompt_safe.py  test_classifier_tool_coercion.py  test_compat_stdio.py  test_delegate_extraction.py  test_delegation_handoff.py  test_eval_runner.py  test_feedback_store_correction.py  test_graph_classify.py  test_harness_classifier_context.py  test_harness_create_agent.py  test_human_approval_middleware.py  test_hybrid_dag_synthesis_prompt.py  test_llm_provider_params.py  test_llm_utils_env.py  test_llm_utils_structured_cache.py  test_mcp_aclose.py  test_mcp_connect_errors.py  test_mcp_inventory_meta.py  test_mcp_system_appendix.py  test_memory.py  test_model_resolver.py  test_models.py  test_multimodal_merge.py  test_observability_metrics_halted.py  test_observability_prometheus.py  test_observability_sqlite_store.py  test_orchestration_plan.py  test_pattern_units.py  test_patterns_resolve.py  (+43 more)
agloom_cli/: .gitignore  README.md  __init__.py  agloom-cli-0.1.0.tgz  agloom-cli-0.1.1.tgz  cli.py  config.py  eslint.config.mjs  hitl.py  hitl_allowlist.py  hitl_ask.py  hitl_ask_types.py  hitl_textual.py  jest.config.cjs  jest.config.mjs  jest.ink.config.mjs  langchain_index_overview.py  llm_provider_params.py  mcp_loader.py  model_resolver.py  package-lock.json  package.json  persistence.py  project.py  project_rules.py  provider_registry.py  provider_wizard.py  quiet_logs.py  renderer.py  repl.py  repl_tui.py  safety_limits.py  session_list.py  session_manager.py  session_resume.py  smart_context.py  superbrain_setup.py  tool_arg_coerce.py  tool_loader.py  tool_result_envelope.py  (+4 more)
agloom_cli/completions/: _agloom  agloom.bash  agloom.fish
agloom_cli/docs/: config.md  direct-mode.md  flags.md  index.md  interactive.md  mcp-memory-harness.md  models.md  quickstart.md  recipes.md  reference.md  smart-context.md  tools-hitl.md  troubleshooting.md
agloom_cli/prompts/: cli_workspace_prompt.txt
agloom_cli/scripts/: agloom-completions.mjs
agloom_cli/src/: agsuperbrainMcpConfig.ts  banner.ts  cliWorkspacePrompt.ts  config.ts  (+8 more)
agloom_web/: .env.example  README.md  eslint.config.mjs  index.html  jest.config.cjs  jest.config.mjs  jest.setup.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
docs/: ROADMAP.md  changelog.md  contributing.md  index.md  requirements.txt
examples/: 01_basic_agent.py  02_tools_and_react.py  03_streaming.py  04_frozen_agent.py  05_multi_agent.py
tests/: test_agent_config.py  test_builtin_tools_corners.py  test_cli.py  test_filesystem_tools.py  test_harness_create_agent.py  test_hitl_allowlist.py  test_llm_provider_params.py  test_local_shell_backend.py  test_mcp_loader.py  test_memory.py  test_model_resolver.py  test_provider_wizard.py  test_react_stray_tool_json.py  test_repl_tool_transcript.py  test_safety_limits.py  test_sandbox_local.py  test_session_list.py  test_session_safety_merge.py  test_tool_arg_coerce.py  test_tool_result_envelope.py  test_tool_structured_invoke_corners.py
(+273 files in other folders)
