[project]
name = "agloom"
version = "0.1.42"
description = "The intelligent fabric for AI agents — 9 execution patterns, auto-classified, self-learning, production-ready. Drop-in replacement for LangChain's create_agent."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.13"
keywords = ["langchain", "langgraph", "agent", "llm", "ai", "patterns", "skills", "agloom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=1.2.17",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.10",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "typer>=0.25.1",
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
    "tomli>=2.4.1",
    "pyfiglet>=1.0.4",
    "httpx>=0.28.1",
    "tiktoken>=0.12.0",
    "langchain-huggingface>=1.2.2",
    "agsuperbrain>=0.0.1",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/HELLOMEDHIRA/agloom"
Documentation = "https://agloom.readthedocs.io"
Repository = "https://github.com/HELLOMEDHIRA/agloom"
Issues = "https://github.com/HELLOMEDHIRA/agloom/issues"

[project.scripts]
agloom = "agloom_cli.cli:run_cli"

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=1.4.3"]
aws = ["langchain-aws>=1.4.5"]
azure-ai = ["langchain-azure-ai>=1.2.3"]
cerebras = ["langchain-cerebras>=0.8.2"]
cohere = ["langchain-cohere>=0.5.1"]
community = ["langchain-community>=0.4.1"]
deepseek = ["langchain-deepseek>=1.0.1"]
fireworks = ["langchain-fireworks>=1.3.0"]
google-genai = ["langchain-google-genai>=4.2.2,<5"]
google-vertexai = ["langchain-google-vertexai>=3.2.3"]
groq = ["langchain-groq>=1.1.2"]
huggingface = ["langchain-huggingface>=1.2.2"]
ibm = ["langchain-ibm>=1.0.7"]
litellm = ["langchain-litellm>=0.6.4"]
mistralai = ["langchain-mistralai>=1.1.3"]
nvidia = ["langchain-nvidia-ai-endpoints>=1.2.1"]
ollama = ["langchain-ollama>=1.1.0"]
openai = ["langchain-openai>=1.2.1"]
openrouter = ["langchain-openrouter>=0.2.3"]
perplexity = ["langchain-perplexity>=1.2.0"]
sambanova = ["langchain-sambanova>=1.1.0"]
snowflake = ["langchain-snowflake>=0.2.3"]
together = ["langchain-together>=0.4.0"]
upstage = ["langchain-upstage>=0.7.7"]
xai = ["langchain-xai>=1.2.2"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
]
# No ``all`` extra: resolving every ``langchain-*`` in one install forces incompatible pins and
# downgrades core ML stack (e.g. ``transformers`` / ``huggingface-hub``). Combine extras instead:
# ``pip install 'agloom[openai,groq,community]'``.

[dependency-groups]
dev = [
    "commitizen>=4.15.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "pre-commit>=4.6.0",
    "pyrefly>=0.63.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "llama-cpp-python>=0.3.22",
    "ipykernel>=7.2.0",
    "iprogress>=0.4",
]

# Super-Brain (graspologic) requires numpy 1.x; cap so qdrant-client resolves to a compatible build.
[tool.uv]
# NumPy: Super-Brain stack. ML pins: optional LangChain extras pull older ``tokenizers``/``transformers``
# which downgrades the default env — overrides keep ``sentence-transformers`` on a modern HF stack.
override-dependencies = [
    "numpy>=1.26.4,<2.0",
    "transformers>=5.7.0",
    "tokenizers>=0.23.1",
    "huggingface-hub>=1.13.0",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agloom", "agloom_cli"]
exclude = ["examples/", "tests/"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["agloom", "agloom_cli", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "T20",    # flake8-print (catches stray print())
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",    # line length handled by formatter
    "S101",    # assert usage is fine for us
    "B008",    # function call in default argument (Pydantic Field)
    "RET504",  # unnecessary assignment before return
    "UP007",   # X | Y union syntax (keep Optional for compat docs)
    "RUF001",  # ambiguous unicode — we use box-drawing chars in log banners
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
    "S110",    # try-except-pass — intentional silencing in fallback paths
    "S112",    # try-except-continue — intentional in retry loops
    "ASYNC109", # async-function-with-timeout — we use asyncio.wait_for explicitly
    "N806",    # variable in function should be lowercase (we use PascalCase for class aliases)
    "N818",    # exception name should end in Error
    "SIM105",  # use contextlib.suppress — explicit try/except is clearer here
    "SIM102",  # collapsible if — sometimes nested ifs are clearer
    "SIM118",  # in-dict-keys — .keys() is sometimes more explicit
    "TC001",   # typing-only-first-party-import — can break runtime
    "TC002",   # typing-only-third-party-import — can break runtime
    "TC003",   # typing-only-stdlib-import — can break runtime
    "UP042",   # replace str+Enum with StrEnum — keep backward compat
    "RUF005",  # collection-literal-concatenation — tuple concat is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20", "E402", "N817", "B006", "B011", "RUF059"]
"examples/*.py" = ["S", "T20", "T201"]
"agloom_cli/tools/*.py" = ["ASYNC230", "ASYNC221", "ASYNC240", "S602"]
"agloom_cli/project.py" = ["S607"]

[tool.ruff.lint.isort]
known-first-party = ["agloom", "agloom_cli", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Pyrefly ───────────────────────────────────────────────────────────────────
# Aligns CLI/editor typechecking with requires-python and CI (library + CLI only).
# Run: `uv run pyrefly check` (project mode) or `uv run pyrefly check agloom agloom_cli examples tests`.

[tool.pyrefly]
python-version = "3.12"
project-includes = ["agloom/**/*.py", "agloom_cli/**/*.py", "examples/**/*.py", "tests/**/*.py"]
# Optional provider / platform packages (lazy-imported or dev-only); treat as ``Any`` so checks pass without every extra.
replace-imports-with-any = [
    "distro",
    "langchain_anthropic",
    "langchain_google_genai",
    "langchain_groq",
    "langchain_mistralai",
    "langchain_ollama",
    "langchain_openai",
    "langchain_xai",
    "openai",
]

# ── Commitizen ────────────────────────────────────────────────────────────────

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.8"
version_files = [
    "pyproject.toml:version",
    "agloom/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
bump_message = "release: v$new_version"

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
